0033338: Coding - IGESToBRep_CurveAndSurface's method has unreachable code

Fixed unreachable code in IGESToBRep_CurveAndSurface::TransferGeometry method